--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
-                <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
+                <span class="box-menu-text">Меню</span><span class="box-menu-icon"></span>
             </a>
             <!-- box-primary-nav-trigger -->
         </header>
@@ -60,17 +60,17 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li class="box-label">About me</li>
+                <li class="box-label">IT Consulting &amp; Digital marketing</li>
 
-                <li><a href="index.html">Intro</a></li>
-                <li><a href="about.html">About me</a></li>
-                <li><a href="services.html">services</a></li>
-                <li><a href="portfolio.html">portfolio</a></li>
-                <li><a href="contact.html">contact me</a> <i class="ion-ios-circle-filled color"></i></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="about.html">О нас</a></li>
+                <li><a href="services.html">Услуги</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
+                <li><a href="contact.html">Контаты</a> <i class="ion-ios-circle-filled color"></i></li>
 
 
 
-                <li class="box-label">Follow me</li>
+                <li class="box-label">Следите за нами</li>
 
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
@@ -84,55 +84,58 @@
 
     <!-- top bar -->
     <div class="top-bar">
-        <h1>contact Me</h1>
-        <p><a href="#">Home</a> / Contact Me</p>
+        <h1>Контакты</h1>
+        <p>Просто позвоните!</p>
     </div>
     <!-- end top bar -->
 
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-6">
-            <form action="#" method="post">
+            <form role="form" id="contactForm" method="post" action="php/contact.php">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="input-contact">
-                            <input type="text" name="name">
-                            <span>your name</span>
+                            <input type="text" id="name" name="name" required="required" data-validation-required-message="Пожалуйста введите ваше имя.">
+                            <span>Ваше имя</span>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="input-contact">
-                            <input type="text" name="email">
-                            <span>your email</span>
+                            <input type="text" name="email" id="email" required="required" data-validation-required-message="Пожалуйста введите вашу почту.">
+                            <span>Ваша почта</span>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="input-contact">
-                            <input type="text" name="object">
-                            <span>object</span>
+                            <input type="text" id="text" name="object">
+                            <span>Тема</span>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="textarea-contact">
-                            <textarea name="message"></textarea>
-                            <span>message</span>
+                            <textarea name="message" id="message" required="required" data-validation-required-message="Пожалуйста введите ваше сообщение."></textarea>
+                            <span>Сообщение</span>
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <a href="#" class="btn btn-box">Send</a>
+                        <button type="submit" class="btn btn-box" id="cfsubmit">Отправить</button>
                     </div>
                 </div>
             </form>
         </div>
 
         <div class="col-md-6">
-            <h3 class="text-uppercase">contact me</h3>
-            <h5>Creative & Lorem ipsum dolor sit amet</h5>
+            <h3 class="text-uppercase">Просто позвоните</h3>
+            <h5>Наш адрес</h5>
             <div class="h-30"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. Tecum optime, deinde etiam cum mediocri amico. Et nemo nimium beatus est; Ac ne plura complectar-sunt enim innumerabilia-, bene laudata virtus voluptatis aditus </p>
+            <ul>
+                <li>Республика Узбекистан, г.Ташкент</li>
+                <li>Сергелийский район 1-квартал 5-26, 100012</li>
+            </ul>
             <div class="contact-info">
-                <p><i class="ion-android-call"></i> 0100 787 3456</p>
-                <p><i class="ion-ios-email"></i> box@info.com</p>
+                <p><i class="ion-android-call"></i>(97) 782-42-68 (99) 818-14-37</p>
+                <p><i class="ion-ios-email"></i> binary.uz@gmail.com</p>
             </div>
         </div>
 
