--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mockups in seconds</span>
-                                    <em>Fashion / Logo</em>
+                                    <span>Разработка веб сайтов</span>
+                                    <em>Подробнее</em>
                                 </div>
                             </div>
                         </div>
@@ -125,8 +125,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Floating mockups</span>
-                                    <em>Ads / Graphics</em>
+                                    <span>Разработка мобильных приложений</span>
+                                    <em>Подробнее</em>
                                 </div>
                             </div>
                         </div>
@@ -141,8 +141,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
+                                    <span>Разработка телеграм ботов</span>
+                                    <em>Подробнее</em>
                                 </div>
                             </div>
                         </div>
@@ -157,8 +157,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Held by hands</span>
-                                    <em>Fashion / Ads</em>
+                                    <span>SMM продвижение</span>
+                                    <em>Подробнее</em>
                                 </div>
                             </div>
                         </div>
@@ -173,8 +173,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
+                                    <span>SEO оптимизация</span>
+                                    <em>Подробнее</em>
                                 </div>
                             </div>
                         </div>
@@ -189,8 +189,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
+                                    <span>Разработка и интеграция CRM систем</span>
+                                    <em>Подробнее</em>
                                 </div>
                             </div>
                         </div>
@@ -205,8 +205,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
+                                    <span>IT консультации</span>
+                                    <em>Подробнее</em>
                                 </div>
                             </div>
                         </div>
@@ -221,8 +221,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
+                                    <span>Контекстная реклама</span>
+                                    <em>Подробнее</em>
                                 </div>
                             </div>
                         </div>
@@ -237,8 +237,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
+                                    <span>IT аутсортинг</span>
+                                    <em>Подробнее</em>
                                 </div>
                             </div>
                         </div>
@@ -253,8 +253,8 @@
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
+                                    <span>Ремонт, обслуживание и техническая поддержка</span>
+                                    <em>Подробнее</em>
                                 </div>
                             </div>
                         </div>
