--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
 
     <!-- top bar -->
     <div class="top-bar">
-        <h1>portfolio</h1>
+        <h1>Раздел на доработке</h1>
         <p><a href="#">Home</a> / Portfolio</p>
     </div>
     <!-- end top bar -->
