--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
             </div>
             <!-- box-nav -->
             <a class="box-primary-nav-trigger" href="#0">
-                <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
+                <span class="box-menu-text">Меню</span><span class="box-menu-icon"></span>
             </a>
             <!-- box-primary-nav-trigger -->
         </header>
@@ -60,17 +60,17 @@
         <!-- nav -->
         <nav>
             <ul class="box-primary-nav">
-                <li class="box-label">About me</li>
+                <li class="box-label">IT Consulting &amp; Digital marketing</li>
 
-                <li><a href="index.html">Intro</a></li>
-                <li><a href="about.html">About me</a></li>
-                <li><a href="services.html">services</a> <i class="ion-ios-circle-filled color"></i></li>
-                <li><a href="portfolio.html">portfolio</a></li>
-                <li><a href="contact.html">contact me</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="about.html">О нас</a></li>
+                <li><a href="services.html">Услуги</a> <i class="ion-ios-circle-filled color"></i></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
+                <li><a href="contact.html">Контакты</a></li>
 
 
 
-                <li class="box-label">Follow me</li>
+                <li class="box-label">Следите за нами</li>
 
                 <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
@@ -83,8 +83,8 @@
 
     <!-- top bar -->
     <div class="top-bar">
-        <h1>services</h1>
-        <p><a href="#">Home</a> / Services</p>
+        <h1>Наши услуги</h1>
+        <p><a href="#">Скачать коммерческое предложение</a></p>
     </div>
     <!-- end top bar -->
 
@@ -93,55 +93,85 @@
 
             <!-- service-box -->
             <div class="col-md-4 service-box">
-                <i class="ion-android-favorite-outline size-50"></i>
-                <h3>Responsive Design</h3>
+                <i class="ion-android-desktop size-50"></i>
+                <h3>Разработка веб сайтов</h3>
                 <div class="h-10"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+                <ul>
+                    <li>Веб сайты</li>
+                    <li>Лендинг пейдж</li>
+                    <li>Сайты визитки</li>
+                    <li>Сайты каталог</li>
+                </ul>
             </div>
             <!-- end service-box -->
 
             <!-- service-box -->
             <div class="col-md-4 service-box">
-                <i class="ion-android-options size-50"></i>
-                <h3>Easy Customization</h3>
+                <i class="ion-android-phone-portrait size-50"></i>
+                <h3>Мобильная разработка</h3>
                 <div class="h-10"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+                <ul>
+                    <li>Android приложения</li>
+                    <li>iOS приложения</li>
+                    <li>WindowsPhone приложения</li>
+                    <li>Telegram bot приложения</li>
+                </ul>
             </div>
             <!-- end service-box -->
 
             <!-- service-box -->
             <div class="col-md-4  service-box">
                 <i class="ion-android-checkmark-circle size-50"></i>
-                <h3>Creative Design</h3>
+                <h3>Автоматизация систем</h3>
                 <div class="h-10"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+                <ul>
+                    <li>Автоматизация учета склада</li>
+                    <li>Автоматизация учета клиентов</li>
+                    <li>Автоматизация учета рабочих</li>
+                    <li>Интеграция и разработка CRM систем</li>
+                </ul>
             </div>
             <!-- end service-box -->
 
             <!-- service-box -->
             <div class="col-md-4  service-box">
-                <i class="ion-ios-pulse-strong size-50"></i>
-                <h3>user friendly</h3>
+                <i class="ion-speakerphone size-50"></i>
+                <h3>SMM продвижение</h3>
                 <div class="h-10"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+                <ul>
+                    <li>Продвижение в Facebook</li>
+                    <li>Продвижение в Instagram</li>
+                    <li>Продвижение в Odnoklassniki</li>
+                    <li>Продвижение в Vkontakte</li>
+                </ul>
             </div>
             <!-- end service-box -->
 
             <!-- service-box -->
             <div class="col-md-4  service-box">
-                <i class="ion-earth size-50"></i>
-                <h3>fully customizible</h3>
+                <i class="ion-search size-50"></i>
+                <h3>SEO оптимизация</h3>
                 <div class="h-10"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+                <ul>
+                    <li>Поднятие рейтинга в Google</li>
+                    <li>Поднятие рейтинга в Yandex</li>
+                    <li>Подключение сервиса Google Analytics</li>
+                    <li>Подключение сервиса Yandex Metrica</li>
+                </ul>
             </div>
             <!-- end service-box -->
 
             <!-- service-box -->
             <div class="col-md-4  service-box">
-                <i class="ion-speedometer size-50"></i>
-                <h3>retina ready</h3>
+                <i class="ion-ios-analytics size-50"></i>
+                <h3>Контекстная реклама</h3>
                 <div class="h-10"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae </p>
+                <ul>
+                    <li>Реклама в Instagram</li>
+                    <li>Реклама в Facebook/Vkontakte</li>
+                    <li>Реклама в Google Adwords</li>
+                    <li>Реклама в Yandex Direct</li>
+                </ul>
             </div>
             <!-- end service-box -->
 
