--- a/single-project.html
+++ b/single-project.html
@@ -130,7 +130,7 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© Box Portfolio 2016</p>
+            <p class="copyright">© binaryGroup 2017</p>
         </div>
     </footer>
     <!-- end footer -->
