--- a/index.html
+++ b/index.html
@@ -261,6 +261,34 @@
                     </a>
                 </div>
                 <!-- end single work -->
+                <!-- single work -->
+                <div class="col-md-6 col-sm-12 photography">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/Guvohnoma.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Свидетельство о регистрации фирмы</span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
+                <!-- single work -->
+                <div class="col-md-6 col-sm-12 photography">
+                    <a href="single-project.html" class="portfolio_item">
+                        <img src="img/guvohnoma1.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Свидетельство о регистрации в Мирзо Улугбенском Инновационным Центре</span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work -->
             </div>
             <!-- end portfolio_container -->
         </div>
@@ -271,7 +299,7 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© Box Portfolio 2016</p>
+            <p class="copyright">© binaryGroup 2017</p>
         </div>
     </footer>
     <!-- end footer -->
